[gd_scene load_steps=38 format=3 uid="uid://wg63g48yqauy"]

[ext_resource type="Script" path="res://src/player/sled/sled.gd" id="1_0ihuf"]
[ext_resource type="PackedScene" uid="uid://gdqr022umlpa" path="res://src/components/shadow/shadow.tscn" id="1_4d11q"]
[ext_resource type="Script" path="res://src/player/follow/follow_component.gd" id="3_md0so"]
[ext_resource type="Texture2D" uid="uid://cxvh14qjl7x24" path="res://assets/gfx/sled/actual-sled.png" id="3_qbjww"]
[ext_resource type="Texture2D" uid="uid://cnj5h7sbb37h" path="res://assets/gfx/sled/crash-animation.png" id="3_y7e1j"]
[ext_resource type="Script" path="res://src/player/jump/jump_component.gd" id="4_xlo5g"]
[ext_resource type="Texture2D" uid="uid://d0rxns14ip217" path="res://assets/gfx/sled/snow - start+loop.png" id="6_fljwt"]
[ext_resource type="Texture2D" uid="uid://dtkxo4l30qdsf" path="res://assets/gfx/snow/small_particles.png" id="8_tmodl"]
[ext_resource type="AudioStream" uid="uid://bg4dn23bcknr8" path="res://assets/sfx/Jump_sled_1.wav" id="9_drlwh"]
[ext_resource type="AudioStream" uid="uid://bs61v1qyyoms1" path="res://assets/sfx/Jump_sled_2.wav" id="10_ois0h"]
[ext_resource type="AudioStream" uid="uid://cbgu4cyqkrvrp" path="res://assets/sfx/Jump_sled_3.wav" id="11_ycmsj"]
[ext_resource type="AudioStream" uid="uid://b53f5wy1qybm5" path="res://assets/sfx/Jump_sled_Land_1.wav" id="12_53rc4"]
[ext_resource type="AudioStream" uid="uid://d4jkhxy3kwmqg" path="res://assets/sfx/Jump_sled_Land_2.wav" id="13_st8hk"]
[ext_resource type="AudioStream" uid="uid://dllv2bpk7sk1m" path="res://assets/sfx/Jump_sled_land_3.wav" id="14_5xqn5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p8kj0"]
size = Vector2(16, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mcqt"]
atlas = ExtResource("3_y7e1j")
region = Rect2(62, 0, 62, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyn72"]
atlas = ExtResource("3_y7e1j")
region = Rect2(124, 0, 62, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1js1"]
atlas = ExtResource("3_y7e1j")
region = Rect2(186, 0, 62, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v3jc"]
atlas = ExtResource("3_y7e1j")
region = Rect2(248, 0, 62, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hgtx"]
atlas = ExtResource("3_y7e1j")
region = Rect2(310, 0, 62, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0kuj"]
atlas = ExtResource("3_qbjww")
region = Rect2(0, 0, 28, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg0xh"]
atlas = ExtResource("3_qbjww")
region = Rect2(28, 0, 28, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_sunci"]
atlas = ExtResource("3_qbjww")
region = Rect2(56, 0, 28, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfy5l"]
atlas = ExtResource("3_qbjww")
region = Rect2(84, 0, 28, 27)

[sub_resource type="SpriteFrames" id="SpriteFrames_mhp7i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mcqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyn72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1js1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v3jc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hgtx")
}],
"loop": false,
"name": &"crash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0kuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg0xh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sunci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfy5l")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8o2f4"]
atlas = ExtResource("6_fljwt")
region = Rect2(0, 20, 34, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_jorfa"]
atlas = ExtResource("6_fljwt")
region = Rect2(34, 20, 34, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_amgaf"]
atlas = ExtResource("6_fljwt")
region = Rect2(68, 20, 34, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_mahg7"]
atlas = ExtResource("6_fljwt")
region = Rect2(0, 0, 34, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_da84n"]
atlas = ExtResource("6_fljwt")
region = Rect2(34, 0, 34, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_65xl1"]
atlas = ExtResource("6_fljwt")
region = Rect2(68, 0, 34, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_f70nn"]
atlas = ExtResource("6_fljwt")
region = Rect2(102, 0, 34, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_0lf8s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o2f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jorfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amgaf")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mahg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_da84n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65xl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f70nn")
}],
"loop": false,
"name": &"start",
"speed": 20.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0wb6u"]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fg5r2"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 12.0
spread = 0.0
gravity = Vector3(0, 9, 0)
damping_min = 1.0
damping_max = 1.0
anim_speed_min = 0.8
anim_speed_max = 1.2

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3c7aa"]
streams_count = 3
stream_0/stream = ExtResource("9_drlwh")
stream_1/stream = ExtResource("10_ois0h")
stream_2/stream = ExtResource("11_ycmsj")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_0sjfv"]
streams_count = 3
stream_0/stream = ExtResource("12_53rc4")
stream_1/stream = ExtResource("13_st8hk")
stream_2/stream = ExtResource("14_5xqn5")

[node name="Sled" type="Area2D" node_paths=PackedStringArray("follow_component", "jump_component")]
collision_mask = 0
script = ExtResource("1_0ihuf")
follow_component = NodePath("FollowComponent")
jump_component = NodePath("JumpComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-16.75, 2.5)
shape = SubResource("RectangleShape2D_p8kj0")

[node name="Shadow" parent="." instance=ExtResource("1_4d11q")]
position = Vector2(-16.5, 2.5)
polygon = PackedVector2Array(0, 3, 1.53366, 2.98451, 3.02302, 2.93905, 4.46054, 2.86513, 5.83868, 2.76425, 7.14989, 2.63792, 8.38664, 2.48765, 9.54139, 2.31495, 10.6066, 2.12132, 12.4382, 1.67733, 13.8212, 1.16774, 15, 0, 13.8212, -1.16774, 12.4382, -1.67733, 10.6066, -2.12132, 9.54139, -2.31495, 8.38664, -2.48765, 7.14989, -2.63792, 5.83868, -2.76425, 4.46054, -2.86513, 3.02302, -2.93905, 1.53366, -2.98451, 0, -3, -1.53366, -2.98451, -3.02302, -2.93905, -4.46054, -2.86513, -5.83868, -2.76425, -7.14989, -2.63792, -8.38664, -2.48765, -9.54139, -2.31495, -10.6066, -2.12132, -12.4382, -1.67733, -13.8212, -1.16774, -15, 0, -13.8212, 1.16774, -12.4382, 1.67733, -10.6066, 2.12132, -9.54139, 2.31495, -8.38664, 2.48765, -7.14989, 2.63792, -5.83868, 2.76425, -4.46054, 2.86513, -3.02302, 2.93905, -1.53366, 2.98451, 0, 3)
radius = 15
depth = 0.2

[node name="JumpingBits" type="Node2D" parent="."]

[node name="Sprite2D" type="AnimatedSprite2D" parent="JumpingBits"]
position = Vector2(-16, -10)
sprite_frames = SubResource("SpriteFrames_mhp7i")
animation = &"crash"
frame = 4
frame_progress = 1.0

[node name="JumpComponent" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("4_xlo5g")
target = NodePath("..")

[node name="FollowComponent" type="Marker2D" parent="." node_paths=PackedStringArray("parent", "jump_component")]
position = Vector2(-7, -2)
script = ExtResource("3_md0so")
parent = NodePath("..")
jump_component = NodePath("../JumpComponent")

[node name="SnowSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-42, -4)
sprite_frames = SubResource("SpriteFrames_0lf8s")
animation = &"run"

[node name="SnowParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_0wb6u")
position = Vector2(-56, 4)
process_material = SubResource("ParticleProcessMaterial_fg5r2")
texture = ExtResource("8_tmodl")
lifetime = 0.8

[node name="sfx_jump" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_3c7aa")
bus = &"Sfx"

[node name="sfx_land" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_0sjfv")
bus = &"Sfx"

[connection signal="jumped" from="JumpComponent" to="." method="_on_jump_component_jumped"]
[connection signal="landed" from="JumpComponent" to="." method="_on_jump_component_landed"]
